--- a/src/gallium/drivers/Makefile.am
+++ b/src/gallium/drivers/Makefile.am
@@ -76,6 +76,14 @@ endif
 
 ################################################################################
 
+if HAVE_GALLIUM_ILO
+
+SUBDIRS += ilo
+
+endif
+
+################################################################################
+
 if HAVE_GALLIUM_NOUVEAU
 
 SUBDIRS += nouveau nv30 nv50 nvc0
