build: Remove GALLIUM_DIRS
It's always constant anyway.

Tested-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-and-Tested-by: Andreas Boll <andreas.boll.dev@gmail.com>
Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,7 +39,9 @@ endif
 
 if HAVE_GALLIUM
 SUBDIRS +=			\
-	gallium			\
+	gallium/auxiliary	\
+	gallium/drivers		\
+	gallium/state_trackers	\
 	gallium/winsys		\
 	gallium/targets
 
