--- a/src/gallium/drivers/Makefile.am
+++ b/src/gallium/drivers/Makefile.am
@@ -11,11 +11,9 @@ AM_CFLAGS = $(VISIBILITY_CFLAGS)
 
 noinst_LTLIBRARIES =
 
-SUBDIRS = .
+SUBDIRS = . trace rbug
 
 ################################################################################
-
-if HAVE_GALAHAD_GALLIUM
 
 noinst_LTLIBRARIES += galahad/libgalahad.la
 
@@ -24,11 +22,7 @@ galahad_libgalahad_la_SOURCES = \
 	galahad/glhd_context.c \
 	galahad/glhd_screen.c
 
-endif
-
 ################################################################################
-
-if HAVE_IDENTITY_GALLIUM
 
 noinst_LTLIBRARIES += identity/libidentity.la
 
@@ -37,11 +31,7 @@ identity_libidentity_la_SOURCES = \
 	identity/id_context.c \
 	identity/id_screen.c
 
-endif
-
 ################################################################################
-
-if HAVE_NOOP_GALLIUM
 
 # Meta-driver which combines whichever software rasterizers have been
 # built into a single convenience library.
@@ -51,8 +41,6 @@ noinst_LTLIBRARIES += noop/libnoop.la
 noop_libnoop_la_SOURCES = \
 	noop/noop_pipe.c \
 	noop/noop_state.c
-
-endif
 
 ################################################################################
 
@@ -72,4 +60,72 @@ endif
 
 ################################################################################
 
-SUBDIRS += $(GALLIUM_MAKE_DIRS)
+if HAVE_GALLIUM_FREEDRENO
+
+SUBDIRS += freedreno
+
+endif
+
+################################################################################
+
+if HAVE_GALLIUM_I915
+
+SUBDIRS += i915
+
+endif
+
+################################################################################
+
+if HAVE_GALLIUM_NOUVEAU
+
+SUBDIRS += nouveau nv30 nv50 nvc0
+
+endif
+
+################################################################################
+
+if HAVE_GALLIUM_SVGA
+
+SUBDIRS += svga
+
+endif
+
+################################################################################
+
+if HAVE_GALLIUM_R300
+
+SUBDIRS += r300
+
+endif
+
+################################################################################
+
+if HAVE_GALLIUM_R600
+
+SUBDIRS += r600
+
+endif
+
+################################################################################
+
+if HAVE_GALLIUM_RADEONSI
+
+SUBDIRS += radeonsi
+
+endif
+
+################################################################################
+
+if NEED_GALLIUM_SOFTPIPE_DRIVER
+
+SUBDIRS += softpipe
+
+endif
+
+################################################################################
+
+if NEED_GALLIUM_LLVMPIPE_DRIVER
+
+SUBDIRS += llvmpipe
+
+endif
