--- a/src/mesa/libdricore/Makefile.am
+++ b/src/mesa/libdricore/Makefile.am
@@ -21,7 +21,7 @@
 
 SRCDIR=$(top_srcdir)/src/mesa/
 BUILDDIR=$(top_builddir)/src/mesa/
-include ../sources.mak
+include ../Makefile.sources
 include ../../glsl/Makefile.sources
 
 noinst_PROGRAMS =
