--- a/src/mesa/program/Makefile.am
+++ b/src/mesa/program/Makefile.am
@@ -19,7 +19,7 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 # IN THE SOFTWARE.
 
-include ../sources.mak
+include ../Makefile.sources
 
 AM_CPPFLAGS = $(API_DEFINES) $(DEFINES) $(INCLUDE_DIRS)
 AM_CFLAGS = $(VISIBILITY_CFLAGS)
