build: Move src/mapi/mapi/* to  src/mapi/
Tested-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-and-Tested-by: Andreas Boll <andreas.boll.dev@gmail.com>
Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

--- a/src/gallium/state_trackers/vega/SConscript
+++ b/src/gallium/state_trackers/vega/SConscript
@@ -49,7 +49,7 @@ vega_sources = [
 
 api_tmp, = env.CodeGenerate(
         target = 'api_tmp.h',
-        script = '#src/mapi/mapi/mapi_abi.py',
+        script = '#src/mapi/mapi_abi.py',
         source = '#src/mapi/vgapi/vgapi.csv',
         command = python_cmd + ' $SCRIPT --printer vgapi --mode app $SOURCE > $TARGET'
 )
