--- a/src/mapi/glapi/Makefile.am
+++ b/src/mapi/glapi/Makefile.am
@@ -21,7 +21,7 @@
 
 TOP = $(top_srcdir)
 include Makefile.sources
-include ../mapi/Makefile.sources
+include ../Makefile.sources
 
 AM_CPPFLAGS = \
         $(DEFINES) \
