build: remove unused API_DEFINES
Reviewed-by: Matt Turner <mattst88@gmail.com>

--- a/src/mesa/Makefile.am
+++ b/src/mesa/Makefile.am
@@ -93,7 +93,7 @@ SRCDIR = $(top_srcdir)/src/mesa/
 BUILDDIR = $(top_builddir)/src/mesa/
 include Makefile.sources
 
-AM_CPPFLAGS = $(API_DEFINES) $(DEFINES) $(INCLUDE_DIRS)
+AM_CPPFLAGS = $(DEFINES) $(INCLUDE_DIRS)
 AM_CFLAGS = $(LLVM_CFLAGS) $(VISIBILITY_CFLAGS)
 AM_CXXFLAGS = $(LLVM_CFLAGS) $(VISIBILITY_CXXFLAGS)
 
