--- a/src/mesa/main/tests/Makefile.am
+++ b/src/mesa/main/tests/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/src/mapi \
 	-I$(top_srcdir)/src/mesa \
 	-I$(top_srcdir)/include \
-	$(API_DEFINES) $(DEFINES) $(INCLUDE_DIRS)
+	$(DEFINES) $(INCLUDE_DIRS)
 
 TESTS = main-test
 check_PROGRAMS = main-test
