--- a/src/mesa/program/Makefile.am
+++ b/src/mesa/program/Makefile.am
@@ -21,7 +21,7 @@
 
 include ../Makefile.sources
 
-AM_CPPFLAGS = $(API_DEFINES) $(DEFINES) $(INCLUDE_DIRS)
+AM_CPPFLAGS = $(DEFINES) $(INCLUDE_DIRS)
 AM_CFLAGS = $(VISIBILITY_CFLAGS)
 AM_CXXFLAGS = $(VISIBILITY_CXXFLAGS)
 libdricore_program_la_CFLAGS = $(NOVISIBILITY_CFLAGS)
