radeon/llvm: Implement radeon_llvm_get_kernel_module() using the C API

--- a/src/gallium/drivers/radeon/Makefile.am
+++ b/src/gallium/drivers/radeon/Makefile.am
@@ -14,6 +14,7 @@ noinst_LTLIBRARIES = libllvmradeon@VERSION@.la
 endif
 
 AM_CXXFLAGS = \
+	$(GALLIUM_CFLAGS) \
 	$(filter-out -DDEBUG, $(LLVM_CXXFLAGS)) \
 	$(DEFINES)
 
